custom.css
/* Mike Lyon hack - these are the changes Brigette made to agency pro 3.0 compared to agency pro 3.0.1 as of 7/29/2014 */
html{
  font-size: 62.5%;
}
body{
  background-color: #ffa200;
  font-family: Verdana, Geneva, sans-serif;
  font-size: 1.6rem;
}
h1{
  font-size: 3.6rem;
}
textarea{
  font-size: 1.4rem;
  padding: 1.6rem;
}
table{
  margin-bottom: 4rem;
}
a{
  color: #ffa200;
}
a img{
  margin-bottom: -0.4rem;
}
p{
  margin: 0 0 2.4rem;
}
blockquote::before{
  font-size: 3rem;
}
blockquote{
  margin: 4rem 4rem 2.4rem;
}
h6{
  font-weight: 700;
  margin: 0 0 1.6rem;
  font-size: 1.6rem;
}
h2{
  font-size: 3rem;
}
h3{
  font-size: 2.4rem;
}
h4{
  font-size: 2rem;
}
h5{
  font-size: 1.8rem;
}
.entry-content .button{
  padding: 1.6rem 2.4rem;
}
.button:hover{
  background-color: #ffa200;
  color: #fff;
}
a.entry-content{
  color: #666;
}
td{
  padding: 0.6rem 0;
}
.site-container{
  padding-top: 6.1rem;
}
.content{
  padding-top: 40px;
}
.sidebar-primary{
  padding-top: 40px;
}
.sidebar-secondary{
  padding-top: 40px;
}
.alignleft .avatar{
  margin-right: 2.4rem;
}
.alignright .avatar{
  margin-left: 2.4rem;
}
.aligncenter{
  margin: 0 auto 2.4rem;
}
.alignnone img{
  margin-bottom: 1.2rem;
}
.wp-caption.alignleft{
  margin: 0 2.4rem 2.4rem 0;
}
.wp-caption.alignright{
  margin: 0 0 2.4rem 2.4rem;
}
.entry-content .wp-caption-text{
  font-size: 1.4rem;
}
.breadcrumb{
  font-size: 1.4rem;
  margin-bottom: 2rem;
}
.author-box{
  margin-bottom: 4rem;
  padding: 4rem;
}
.archive-description{
  padding: 4rem 4rem 2.4rem;
}
.author-box-title{
  font-size: 1.6rem;
  margin-bottom: 0.4rem;
}
.author-box .avatar{
  margin-right: 2.4rem;
}
.entry-title{
  font-size: 3.6rem;
}
.widget-title{
  font-size: 1.6rem;
  margin-bottom: 1.6rem;
}
.archive-title{
  font-size: 2rem;
  margin-bottom: 2.4rem;
}
.widget li{
  margin-bottom: 0.6rem;
}
.widget li li{
  padding: 0 0 0 2rem;
}
.featured-content .entry{
  margin-bottom: 2rem;
  padding: 0 0 2.4rem;
}
.featured-content .entry-title{
  font-size: 2.2rem;
}
.enews-widget input{
  margin-bottom: 1.6rem;
}
.enews-widget input:hover[type="submit"]{
  background-color: #ffa200;
}
.latest-tweets ul li{
  margin-bottom: 1.6rem;
}
div.gform_wrapper .ginput_complex label{
  font-size: 12px;
  font-size: 1.2rem;
  padding: 12px;
  padding: 1.2rem;
}
div.gform_wrapper form li{
  margin: 12px 0 0;
  margin: 1.2rem 0 0;
}
div.gform_wrapper .gform_footer input[type="submit"]{
  font-size: 10px;
  font-size: 1.0rem;
}
.gform_body{
  font-size: 12px;
  font-size: 1.2rem;
}
.org-title {
  color: #B3C7FC;
  font-family: "Spinnaker", sans-serif;
  font-size: 1.5em;
  line-height: 1.2em;
}
.site-header{
  background-image: url("http://ska.org/wp-content/uploads/SKA-header-bkgd-gradation.jpg");
  background-repeat: repeat-x;
  background-color:transparent;
}
.site-header .widget{
  width: 100%;
}
.site-header .widget:last-child{
  float: right;
  width: 260px;
  margin-bottom: -110px;
}
.header-widget-area .widget.widget_text {
  float:right;
  margin-top: -11.5rem;
}
#home-top .widget_text h2 {
  color: #FFF;
  margin-top: 1em;
  text-shadow: 2px 2px 4px #000;
}
#nav_menu-4{
  margin-top: -1rem;
}
.title-area{
  min-height: 5em;
  padding: 0.75em 0 0 0;
  width: 100%;
}
.site-title{
  font-size: 2em;
  line-height: 1.2em;
  text-transform: none;
}
.site-title a{
  color: #f3cd5c;
}
.site-title a:hover{
  color: #ffa200;
}
.site-description{
  color: #B3C7FC;
  font-size: 12px;
  font-size: 1.4rem;
  font-weight: 100;
  margin-bottom: 0.5em;
}
.site-header .widget-area{
  float: left;
  margin-top: 0;
  text-align: left;
  width: 100%;
}
.site-header .search-form{
  margin-top: 2.4rem;
}
.genesis-nav-menu a:hover,
.genesis-nav-menu .current-menu-item > a,
.genesis-nav-menu .v .current-menu-item > a:hover {
  color: #fff;
  background-color: transparent;
}
.genesis-nav-menu .menu-item.touched {
  position: relative;
}
.genesis-nav-menu .menu-item:focus {
  position: relative;
}
.genesis-nav-menu .menu-item:hover {
  position: relative;
}
.genesis-nav-menu .menu-item:active {
  position: relative;
}
.genesis-nav-menu .menu-item.touched > .sub-menu {
  left: auto;
  opacity: 1;
}
.genesis-nav-menu .menu-item:focus > .sub-menu {
  left: auto;
  opacity: 1;
}
.genesis-nav-menu .menu-item:hover > .sub-menu {
  left: auto;
  opacity: 1;
}
.genesis-nav-menu .menu-item:active > .sub-menu {
  left: auto;
  opacity: 1;
}
.genesis-nav-menu .sub-menu {
  border-top-color: #0c1640;
  border-top: thick;
}
.genesis-nav-menu .sub-menu a {
  background-color: #0c1640;
}
.genesis-nav-menu .sub-menu a:hover {
  background-color: #0c1640;
}
.genesis-nav-menu .sub-menu .sub-menu {
  width: 112px;
}
.genesis-nav-menu .sub-menu .sub-menu a {
  background-color: #15204D;
  width: 112px;
}
.genesis-nav-menu{
  font-size: 1.4rem;
}
.genesis-nav-menu a{
  color: #f70;
  padding: 0.75em 1em;
  border-top: none;
  background-color: transparent;
}
.genesis-nav-menu .v .current-menu-item > a:hover{
  color: #fff;
  background-color: #0c1741;
}
.genesis-nav-menu .sub-menu .current-menu-item > a{
  color: #fff;
}
.genesis-nav-menu .sub-menu a{
  background-color: #0c1640;
  font-size: 1.2rem;
  padding: 1rem 1rem 1rem 1.6rem;
}
.genesis-nav-menu > .right{
  float: left;
}
.genesis-nav-menu > .date{
  padding: 1.8rem 1.6rem 2rem 0rem;
}
.genesis-nav-menu > .search{
  padding: 1rem 0 0;
}
.genesis-nav-menu .search input{
  font-size: 1.2rem;
  padding: 1.2rem;
}
.site-header .genesis-nav-menu{
  float: left;
}
.agency-pro-home .content .widget{
  background: #transparent;
  margin-bottom: 8rem;
  padding: 4rem;
}
.agency-pro-home .content .featured-content{
  padding: 0;
}
.agency-pro-home .content .featured-content .widget-title{
  color: #fff;
  text-align: center;
  margin: -40px 0 0;
  margin: -4rem 0 0;
  padding-bottom: 20px;
  padding-bottom: 2rem;
}
/* ... */

